--- a/templates/authors/author_detail.html
+++ b/templates/authors/author_detail.html
@@ -94,11 +94,11 @@
       </ul>
       <div id="tab-1" class="tab-content current grid w-full grid-cols-1 lg:grid-cols-3 gap-12">
         {% for project in projects  %}
-        <a href="/product/{{project.id}}" class="relative flex flex-col items-center justify-start col-span-1 overflow-hidden  rounded-lg " style="height: 420px;">
+        <a href="/product/{{project.id}}" class="relative flex flex-col items-center justify-start col-span-1 overflow-hidden  rounded-lg " style="max-height: 470px;">
           <div id="fontCard" class="flex flex-col items-start w-full h-full">
             <div class="flex flex-col items-center justify-start w-full bg-white" id="card">
               {% if project.image.content_type == "mp4" %}
-              <video autoplay muted loop poster="{{project.image.thumnail.url}}" class="object-cover cursor-pointer w-full " style="height: 300px;" playsinline>
+              <video autoplay muted loop poster="{{project.image.thumnail.url}}" class="object-cover cursor-pointer w-full " style="max-height: 350px;" playsinline>
                 <source src="{{project.image.file360.url}}" />
               </video>
               {% else %}
