--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -248,11 +248,11 @@
       <div>
         <a href="/product/{{otherProduct.pk}}">
           {% if otherProduct.image.content_type == "mp4" %}
-          <video autoplay muted loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer w-full h-full" playsinline style="width:290px;height:290px">
+          <video autoplay muted loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer  h-full" playsinline style="height:290px">
             <source src="{{otherProduct.image.file360.url}}" />
           </video>
           {% else %}
-          <img src="{{otherProduct.image.file360.url}}" class="cursor-pointer w-full h-full object-cover" style="width:290px;height:290px" />
+          <img src="{{otherProduct.image.file360.url}}" class="cursor-pointer w-full h-full object-cover" style="height:290px" />
           {% endif %}
         </a>
       </div>
@@ -272,7 +272,7 @@
       slidesToScroll: 1,
       autoplay: true,
       autoplaySpeed: 2000,
-      arrow: true
+      arrows: true
 
       // responsive: [{
       //     breakpoint: 1024,
