--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -242,17 +242,17 @@
   <div class="py-12 flex flex-col items-center container px-3 lg:px-6 ">
 
 
-    <div class="slide_slick ">
+    <div class=" slide_slick w-full">
 
       {% for otherProduct in otherProducts %}
       <div>
         <a href="/product/{{otherProduct.pk}}">
           {% if otherProduct.image.content_type == "mp4" %}
-          <video autoplay muted loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer" playsinline style="height:290px">
+          <video autoplay muted loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer  " playsinline style="height:290px">
             <source src="{{otherProduct.image.file360.url}}" />
           </video>
           {% else %}
-          <img src="{{otherProduct.image.file360.url}}" class="cursor-pointer   object-cover" style="height:290px" />
+          <img src="{{otherProduct.image.file360.url}}" class="cursor-pointer  object-cover" style="height:290px" />
           {% endif %}
         </a>
       </div>
@@ -266,66 +266,44 @@
 <script>
   document.addEventListener('DOMContentLoaded', function() {
     $('.slide_slick').slick({
+      slide: 'div',
       dots: true,
+      arrows: true,
+      autoplay: ture,
       infinite: false,
+      speed: 300,
+      draggable: true,
+      autoplaySpeed: 10000,
+      pauseOnHover: true,
+      vertical: false,
+      prevArrow: "<button type='button' class='slick-prev'>Previous</button>",
+      nextArrow: "<button type='button' class='slick-next'>Next</button>",
       slidesToShow: 4,
-      slidesToScroll: 1,
-      autoplay: true,
-      autoplaySpeed: 2000,
-
-
-      // responsive: [{
-      //     breakpoint: 1024,
-      //     settings: {
-      //       dots: true,
-      //       infinite: false,
-      //       slidesToShow: 4,
-      //       slidesToScroll: 1,
-      //       autoplay: true,
-      //       autoplaySpeed: 2000,
-
-      //     }
-      //   },
-      //   {
-      //     breakpoint: 600,
-      //     settings: {
-      //       s dots: true,
-      //       infinite: false,
-      //       slidesToShow: 4,
-      //       slidesToScroll: 1,
-      //       autoplay: true,
-      //       autoplaySpeed: 2000,
-
-      //     }
-      //   },
-      //   {
-      //     breakpoint: 480,
-      //     settings: {
-      //       dots: true,
-      //       infinite: false,
-      //       slidesToShow: 4,
-      //       slidesToScroll: 1,
-      //       autoplay: true,
-      //       autoplaySpeed: 2000,
-
-      //     }
-      //   }
-      //   // You can unslick at a given breakpoint now by adding:
-      //   // settings: "unslick"
-      //   // instead of a settings object
-      // ]
+      slidesToScroll: 4,
+      responsive: [{
+        breakpoint: 1024,
+        settings: {
+          slidesToShow: 3,
+          slidesToScroll: 3,
+          infinite: true,
+          dots: true
+        }
+      }, {
+        breakpoint: 600,
+        settings: {
+          slidesToShow: 2,
+          slidesToScroll: 2
+        }
+      }, {
+        breakpoint: 480,
+        settings: {
+          slidesToShow: 1,
+          slidesToScroll: 1
+        }
+      }]
     });
-    // new Splide('#image-slider', {
-    //   perPage: 3,
-    //   rewind: true,
-    //   fixedWidth: 280,
-    //   fixedHeight: 280,
-    //   gap: 10,
-    //   rewind: true,
-    //   pagination: false,
-    //   cover: true,
-    //   isNavigation: true,
-    // }).mount();
+
+
   });
 
   const shareButton = document.querySelector('.share-button');
