--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -248,11 +248,11 @@
 
       <a href="/product/{{otherProduct.pk}}">
         {% if otherProduct.image.content_type == "mp4" %}
-        <video autoplay muted loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer  " playsinline style="height:290px">
+        <video autoplay muted loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer  " playsinline style="height:290px;width: 270px;">
           <source src="{{otherProduct.image.file360.url}}" />
         </video>
         {% else %}
-        <img src="{{otherProduct.image.file360.url}}" class="cursor-pointer  object-cover" style="height:290px" />
+        <img src="{{otherProduct.image.file360.url}}" class="cursor-pointer  object-cover" style="height:290px;width: 270px;" />
         {% endif %}
       </a>
 
@@ -276,8 +276,8 @@
       autoplaySpeed: 10000,
       pauseOnHover: true,
       vertical: false,
-      prevArrow: "<button type='button' class='slick-prev'>Previous</button>",
-      nextArrow: "<button type='button' class='slick-next'>Next</button>",
+      prevArrow: "<button type='button' class='slick-prev text-white'>Previous</button>",
+      nextArrow: "<button type='button' class='slick-next text-white'>Next</button>",
       slidesToShow: 4,
       slidesToScroll: 4,
       responsive: [{
