--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -245,16 +245,17 @@
     <div class=" slide_slick w-full">
 
       {% for otherProduct in otherProducts %}
-
-      <a href="/product/{{otherProduct.pk}}">
-        {% if otherProduct.image.content_type == "mp4" %}
-        <video autoplay muted loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer  " playsinline style="height:290px;width: 270px;">
-          <source src="{{otherProduct.image.file360.url}}" />
-        </video>
-        {% else %}
-        <img src="{{otherProduct.image.file360.url}}" class="cursor-pointer  object-cover" style="height:290px;width: 270px;" />
-        {% endif %}
-      </a>
+      <div style="height:290px;width: 270px;">
+        <a href="/product/{{otherProduct.pk}}" class="h-full w-full">
+          {% if otherProduct.image.content_type == "mp4" %}
+          <video autoplay muted loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer  " playsinline style="height:290px;width: 270px;">
+            <source src="{{otherProduct.image.file360.url}}" />
+          </video>
+          {% else %}
+          <img src="{{otherProduct.image.file360.url}}" class="cursor-pointer  object-cover" style="height:290px;width: 270px;" />
+          {% endif %}
+        </a>
+      </div>
 
       {% endfor %}
 
@@ -264,7 +265,7 @@
   </div>
 </div>
 <script>
-  document.addEventListener('DOMContentLoaded', function() {
+  $(document).ready(function() {
     $('.slide_slick').slick({
       slide: 'a',
       dots: true,
